--- a/index.html
+++ b/index.html
@@ -61,6 +61,71 @@
 
     <div class="content" id="content">
       <div id="search-results" style="display: flex; flex-wrap: wrap"></div>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="staticBackdrop"
+        data-bs-backdrop="static"
+        data-bs-keyboard="false"
+        tabindex="-1"
+        aria-labelledby="staticBackdropLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div
+            class="modal-content"
+            style="
+              background: rgb(41, 8, 51);
+              background: linear-gradient(
+                90deg,
+                rgba(41, 8, 51, 1) 0%,
+                rgba(37, 0, 138, 1) 100%
+              );
+            "
+          >
+            <div class="modal-body">
+              <div class="d-flex justify-content-end">
+                <button
+                  type="button"
+                  class="btn"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <img src="./image/close.png" width="20px" height="20px" />
+                </button>
+              </div>
+              <img
+                src=""
+                id="modal-image"
+                class="card-img-top"
+                alt=""
+                width="auto"
+                height="auto"
+              />
+              <div style="color: aqua">
+                <h5 class="card-title" id="modal-title"></h5>
+                <p class="card-text" id="modal-text"></p>
+              </div>
+              <div>
+                <audio controls id="modal-audio">
+                  <source src="" type="audio/mpeg" />
+                  Your browser does not support the audio tag.
+                </audio>
+              </div>
+              <div class="d-flex justify-content-end">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Close
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div id="inner-content">
         <div
           id="carouselExampleInterval"
@@ -145,9 +210,32 @@
       <div class="container">
         <p>&copy; 2024 Music Player. All rights reserved.</p>
         <p>
-          Follow us on: <a href="#" class="text-white">Facebook</a> |
-          <a href="#" class="text-white">Twitter</a> |
-          <a href="#" class="text-white">Instagram</a>
+          Follow us on:
+          <a
+            href="https://www.linkedin.com/in/1999sumanrana/"
+            class="text-white"
+            ><img
+              src="./image/linkedin.png"
+              alt="linkedin"
+              width="40px"
+              height="40px"
+          /></a>
+          |
+          <a href="https://x.com/1999sumanrana" class="text-white"
+            ><img
+              src="./image/twitter (1).png"
+              alt="twitter"
+              width="40px"
+              height="40px"
+          /></a>
+          |
+          <a href="https://www.instagram.com/_su_m_an_07/" class="text-white"
+            ><img
+              src="./image/instagram.png"
+              alt="instagram"
+              width="40px"
+              height="40px"
+          /></a>
         </p>
       </div>
     </footer>
